src/test/ui/union/union-custom-drop.stderr
error[E0740]: unions may not contain fields that need dropping
  --> $DIR/union-custom-drop.rs:7:5
   |
LL |     bar: Bar,
   |     ^^^^^^^^
   |
help: wrap the type with `std::mem::ManuallyDrop` and ensure it is manually dropped
   |
LL |     bar: std::mem::ManuallyDrop<Bar>,
   |          +++++++++++++++++++++++   +

error: aborting due to previous error

For more information about this error, try `rustc --explain E0740`.
